llama-augmentation wip

--- a/notebooks/llama/llama.ipynb
+++ b/notebooks/llama/llama.ipynb
@@ -13,15 +13,25 @@
     "# ! pip install torch==2.3.0 xformers triton\n",
     "# ! pip install transformers==4.45.0\n",
     "# ! pip install unsloth==2024.9.post3\n",
+    "# ! pip uninstall unsloth -y && pip install --upgrade --no-cache-dir \"unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git\"\n",
     "# ! pip install --no-deps --upgrade \"flash-attn>=2.6.3\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "df5c9ea186d5046a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: CUDA_VISIBLE_DEVICES=1\n",
+      "env: TOKENIZERS_PARALLELISM=false\n"
+     ]
+    }
+   ],
    "source": [
     "%env CUDA_VISIBLE_DEVICES=1\n",
     "%env TOKENIZERS_PARALLELISM=false"
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2b6b886cea3ea3aa",
    "metadata": {},
    "outputs": [],
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5d515f651d366f5e",
    "metadata": {},
    "outputs": [],
@@ -55,10 +65,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "148d053f55d36a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stepan/.conda/envs/llm-py310/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n"
+     ]
+    }
+   ],
    "source": [
     "import torch  # type: ignore\n",
     "import numpy as np  # type: ignore\n",
@@ -80,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "31950c8f19e622c7",
    "metadata": {},
    "outputs": [],
@@ -90,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "988ec45b558ea6b5",
    "metadata": {},
    "outputs": [],
@@ -134,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "da726f0b32fd2573",
    "metadata": {},
    "outputs": [],
@@ -158,17 +184,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bb5c5c94712a79c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==((====))==  Unsloth 2024.9.post3: Fast Llama patching. Transformers = 4.45.1.\n",
+      "   \\\\   /|    GPU: NVIDIA RTX A5000. Max memory: 23.679 GB. Platform = Linux.\n",
+      "O^O/ \\_/ \\    Pytorch: 2.4.1+cu121. CUDA = 8.6. CUDA Toolkit = 12.1.\n",
+      "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.28.post1. FA2 = True]\n",
+      " \"-____-\"     Free Apache license: http://github.com/unslothai/unsloth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unsloth 2024.9.post3 patched 28 layers with 28 QKV layers, 28 O layers and 28 MLP layers.\n"
+     ]
+    }
+   ],
    "source": [
     "model, tokenizer = get_model_tokenizer(add_lora=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d05b87ad",
    "metadata": {},
    "outputs": [],
@@ -185,10 +230,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fe44745c16e12d3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 105/105 [00:00<00:00, 1395.34 examples/s]\n",
+      "Map: 100%|██████████| 416/416 [00:00<00:00, 1361.42 examples/s]\n",
+      "Map: 100%|██████████| 419/419 [00:00<00:00, 697.84 examples/s]\n",
+      "Map: 100%|██████████| 416/416 [00:00<00:00, 1477.83 examples/s]\n",
+      "Map: 100%|██████████| 419/419 [00:00<00:00, 956.06 examples/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
+       "        num_rows: 416\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
+       "        num_rows: 293\n",
+       "    })\n",
+       "    val: Dataset({\n",
+       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
+       "        num_rows: 126\n",
+       "    })\n",
+       "    predict: Dataset({\n",
+       "        features: ['id', 'challenge', 'texts', 'messages'],\n",
+       "        num_rows: 105\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset = data_utils.prepare_dataset(tokenizer, fit_dataset=False, base_path=BASE_PATH, final_training=False, prepare_inputs_func=prepare_inputs)\n",
     "dataset"
@@ -196,20 +280,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "54f87107",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(dataset[\"train\"][0][\"texts\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "877bb5e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train split:\n",
+      "  Min training samples: 2\n",
+      "  Max training samples: 10\n",
+      "  Avg training samples: 3.35\n",
+      "\n",
+      "Val split:\n",
+      "  Min training samples: 2\n",
+      "  Max training samples: 7\n",
+      "  Avg training samples: 3.48\n",
+      "\n",
+      "Test split:\n",
+      "  Min training samples: 2\n",
+      "  Max training samples: 7\n",
+      "  Avg training samples: 3.47\n",
+      "\n",
+      "Predict split:\n",
+      "  Min training samples: 2\n",
+      "  Max training samples: 8\n",
+      "  Avg training samples: 3.34\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate min, max, and avg number of training samples per dataset record for each split\n",
     "def calculate_training_samples_stats(dataset_split):\n",
@@ -235,10 +336,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3a769215",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Filter: 100%|██████████| 416/416 [00:01<00:00, 304.80 examples/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 train tasks were filtered out because they exceed the 28672 token limit.\n",
+      "The filtered train dataset contains 416 tasks for fine-tuning.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Filter: 100%|██████████| 126/126 [00:00<00:00, 227.66 examples/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 val tasks were filtered out because they exceed the 28672 token limit.\n",
+      "The filtered val dataset contains 126 tasks for evaluation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Filter: 100%|██████████| 293/293 [00:01<00:00, 204.70 examples/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 test tasks were filtered out because they exceed the 28672 token limit.\n",
+      "The filtered test dataset contains 293 tasks for evaluation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Filter: 100%|██████████| 105/105 [00:00<00:00, 332.98 examples/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 predict tasks were filtered out because they exceed the 28672 token limit.\n",
+      "The filtered predict dataset contains 105 tasks for evaluation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def filter_dataset_by_token_limit(dataset, max_seq_length):\n",
     "    def filter_split(split_name):\n",
@@ -262,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b13b3692",
    "metadata": {},
    "outputs": [],
@@ -298,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c9a1d37f",
    "metadata": {},
    "outputs": [],
@@ -328,7 +497,7 @@
     "        weight_decay=0.01,\n",
     "        lr_scheduler_type=\"linear\",\n",
     "        seed=3407,\n",
-    "        output_dir=f\"{BASE_PATH}/models/llama-3_1-8b-it\",\n",
+    "        output_dir=f\"{BASE_PATH}/models/llama-3_2-3b-it\",\n",
     "        save_strategy=\"steps\",\n",
     "        save_steps=250,\n",
     "        save_total_limit=2,\n",
@@ -349,10 +518,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ff3a7382",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map (num_proc=2): 100%|██████████| 416/416 [00:01<00:00, 265.26 examples/s]\n",
+      "Map (num_proc=2): 100%|██████████| 126/126 [00:01<00:00, 87.52 examples/s] \n",
+      "max_steps is given, it will override any value given in num_train_epochs\n",
+      "==((====))==  Unsloth - 2x faster free finetuning | Num GPUs = 1\n",
+      "   \\\\   /|    Num examples = 416 | Num Epochs = 10\n",
+      "O^O/ \\_/ \\    Batch size per device = 1 | Gradient Accumulation steps = 8\n",
+      "\\        /    Total batch size = 8 | Total steps = 500\n",
+      " \"-____-\"     Number of trainable parameters = 24,313,856\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='500' max='500' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [500/500 1:11:53, Epoch 9/10]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>100</td>\n",
+       "      <td>0.421200</td>\n",
+       "      <td>0.219637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>200</td>\n",
+       "      <td>0.191100</td>\n",
+       "      <td>0.200357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>300</td>\n",
+       "      <td>0.183100</td>\n",
+       "      <td>0.196181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>400</td>\n",
+       "      <td>0.175500</td>\n",
+       "      <td>0.194012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>500</td>\n",
+       "      <td>0.172300</td>\n",
+       "      <td>0.193180</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=500, training_loss=0.22864407348632812, metrics={'train_runtime': 4324.6254, 'train_samples_per_second': 0.925, 'train_steps_per_second': 0.116, 'total_flos': 1.8298041746009088e+17, 'train_loss': 0.22864407348632812, 'epoch': 9.615384615384615})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainer, stats = training(model, tokenizer, dataset, max_seq_length=MAX_SEQ_LENGTH)\n",
     "stats"
@@ -365,7 +612,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.save_model(f\"{BASE_PATH}/models/llama-3_3-3b-it\")"
+    "trainer.save_model(f\"{BASE_PATH}/models/llama-3_2-3b-it\")"
    ]
   },
   {
