--- a/notebooks/llama/llama-augmentation.ipynb
+++ b/notebooks/llama/llama-augmentation.ipynb
@@ -78198,9 +78198,9 @@
    "outputs": [],
    "source": [
     "def create_chat_with_correction(challenge, solution=None):\n",
-    "    user_content = data_utils.BASIC_PROMPT.format(\n",
+    "    user_content = data_utils.COMPREHENSIVE_PROMPT.format(\n",
     "        training_data=\"\\n\\n\".join([prepare_inputs(ex) for ex in challenge[\"train\"]]),\n",
-    "        errors_corrections=challenge[\"correction\"][\"message\"], # TODO: add this to the prompt\n",
+    "        errors_corrections=f'<output>{challenge[\"correction\"][\"output\"]}</output>\\nMessage: {challenge[\"correction\"][\"message\"]}',\n",
     "        input_test_data=prepare_inputs(challenge[\"test\"]),\n",
     "    )\n",
     "\n",
@@ -78219,6 +78219,68 @@
     "\n",
     "    return messages"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66a05e8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"{BASE_PATH}/data/train_corrections.json\", \"w\") as f:\n",
+    "    json.dump(transform_results(train_results), f, indent=4)\n",
+    "\n",
+    "with open(f\"{BASE_PATH}/data/test_corrections.json\", \"w\") as f:\n",
+    "    json.dump(transform_results(test_results), f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4df117e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_dataset(tokenizer, dataset, base_path=None):\n",
+    "    # Load all datasets\n",
+    "    train_corrections = data_utils.load_data(f'{base_path}/data/train_corrections.json')\n",
+    "    test_corrections = data_utils.load_data(f'{base_path}/data/test_corrections.json')\n",
+    "    \n",
+    "    augmented_dataset = build_augmented_dataset(dataset, train_corrections, test_corrections)\n",
+    "\n",
+    "    def process_dataset(examples, solutions=None):\n",
+    "        # Create messages for each challenge-solution pair\n",
+    "        chats = []\n",
+    "        for challenge, solution in zip(examples[\"challenge\"], solutions or [None] * len(examples[\"challenge\"])):\n",
+    "            chat = create_chat_with_correction(challenge, solution)\n",
+    "            chats.append(chat)\n",
+    "\n",
+    "        # Apply chat template to each message\n",
+    "        texts = [tokenizer.apply_chat_template(chat, tokenize=False, add_generation_prompt=False) for chat in chats]\n",
+    "\n",
+    "        return {\"texts\": texts, \"messages\": chats}\n",
+    "\n",
+    "    train_dataset = augmented_dataset[\"train\"].map(lambda x: process_dataset(x, augmented_dataset[\"train\"][\"solution\"]), batched=True)\n",
+    "    test_dataset = augmented_dataset[\"test\"].map(lambda x: process_dataset(x), batched=True)\n",
+    "\n",
+    "    return DatasetDict(\n",
+    "        {\n",
+    "            \"train\": train_dataset,\n",
+    "            \"test\": test_dataset,\n",
+    "        }\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5e77368",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_dataset = prepare_dataset(tokenizer, dataset, base_path=BASE_PATH)\n",
+    "final_dataset"
+   ]
   }
  ],
  "metadata": {
@@ -78226,18 +78288,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
   }
  },
  "nbformat": 4,
