--- a/notebooks/llama/llama-augmentation.ipynb
+++ b/notebooks/llama/llama-augmentation.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0ffc0ba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: make sure that evaluation during fine-tuning is correct\n",
+    "# there might be a mistake that we do not include output in the final test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "df5c9ea186d5046a",
    "metadata": {},
@@ -173,7 +184,9 @@
     "    else:\n",
     "        input_str = \"\\n\".join(\" \".join(map(str, row)) for row in dct[\"input\"])\n",
     "        output_str = \"\\n\".join(\" \".join(map(str, row)) for row in dct[\"output\"]) if \"output\" in dct else \"\"\n",
-    "        text = f\"<input>\\n{input_str}\\n</input>\\n\\n<output>\\n{output_str}\\n</output>\"\n",
+    "        text = f\"<input>\\n{input_str}\\n</input>\"\n",
+    "        if output_str:\n",
+    "            text += f\"\\n\\n<output>\\n{output_str}\\n</output>\"\n",
     "        return text"
    ]
   },
@@ -296,9 +309,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 323/323 [00:00<00:00, 1864.40 examples/s]\n",
-      "Map: 100%|██████████| 1302/1302 [00:00<00:00, 1424.12 examples/s]\n",
-      "Map: 100%|██████████| 1363/1363 [00:01<00:00, 1030.76 examples/s]\n"
+      "Map: 100%|██████████| 323/323 [00:00<00:00, 1889.49 examples/s]\n",
+      "Map: 100%|██████████| 1302/1302 [00:00<00:00, 1416.76 examples/s]\n",
+      "Map: 100%|██████████| 1363/1363 [00:01<00:00, 1010.62 examples/s]\n"
      ]
     },
     {
@@ -78016,7 +78029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "35a031f0",
    "metadata": {},
    "outputs": [],
@@ -78052,7 +78065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "e072e5f5",
    "metadata": {},
    "outputs": [],
@@ -78066,7 +78079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "02f6e3f4",
    "metadata": {},
    "outputs": [],
@@ -78086,7 +78099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "42606d57",
    "metadata": {},
    "outputs": [
@@ -78103,7 +78116,7 @@
        "  'Output is correct': 24})"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78128,7 +78141,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
+   "id": "b362c08d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '007bbfb7',\n",
+       " 'challenge': {'order': 0,\n",
+       "  'test': {'input': [[0, 7, 7], [7, 7, 7], [0, 7, 7]]},\n",
+       "  'train': [{'input': [[4, 0, 4], [0, 0, 0], [0, 4, 0]],\n",
+       "    'output': [[4, 0, 4, 0, 0, 0, 4, 0, 4],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 4, 0, 0, 0, 0, 0, 4, 0],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 4, 0, 4, 0, 0, 0],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 0, 4, 0, 0, 0, 0]]},\n",
+       "   {'input': [[0, 0, 0], [0, 0, 2], [2, 0, 2]],\n",
+       "    'output': [[0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 2],\n",
+       "     [0, 0, 0, 0, 0, 0, 2, 0, 2],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 2, 0, 0, 0, 0, 0, 2],\n",
+       "     [2, 0, 2, 0, 0, 0, 2, 0, 2]]},\n",
+       "   {'input': [[6, 6, 0], [6, 0, 0], [0, 6, 6]],\n",
+       "    'output': [[6, 6, 0, 6, 6, 0, 0, 0, 0],\n",
+       "     [6, 0, 0, 6, 0, 0, 0, 0, 0],\n",
+       "     [0, 6, 6, 0, 6, 6, 0, 0, 0],\n",
+       "     [6, 6, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [6, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 6, 6, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 6, 6, 0, 6, 6, 0],\n",
+       "     [0, 0, 0, 6, 0, 0, 6, 0, 0],\n",
+       "     [0, 0, 0, 0, 6, 6, 0, 6, 6]]},\n",
+       "   {'input': [[2, 2, 2], [0, 0, 0], [0, 2, 2]],\n",
+       "    'output': [[2, 2, 2, 2, 2, 2, 2, 2, 2],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 2, 2, 0, 2, 2, 0, 2, 2],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 2, 2, 2, 2, 2, 2],\n",
+       "     [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "     [0, 0, 0, 0, 2, 2, 0, 2, 2]]}]},\n",
+       " 'solution': [[0, 0, 0, 0, 7, 7, 0, 7, 7],\n",
+       "  [0, 0, 0, 7, 7, 7, 7, 7, 7],\n",
+       "  [0, 0, 0, 0, 7, 7, 0, 7, 7],\n",
+       "  [0, 7, 7, 0, 7, 7, 0, 7, 7],\n",
+       "  [7, 7, 7, 7, 7, 7, 7, 7, 7],\n",
+       "  [0, 7, 7, 0, 7, 7, 0, 7, 7],\n",
+       "  [0, 0, 0, 0, 7, 7, 0, 7, 7],\n",
+       "  [0, 0, 0, 7, 7, 7, 7, 7, 7],\n",
+       "  [0, 0, 0, 0, 7, 7, 0, 7, 7]],\n",
+       " 'texts': '<|begin_of_text|><|start_header_id|>system<|end_header_id|>\\n\\nCutting Knowledge Date: December 2023\\nToday Date: 14 Oct 2024\\n\\nYou are a puzzle solving wizard. You are given a puzzle from the abstraction and reasoning corpus developed by Francois Chollet.<|eot_id|><|start_header_id|>user<|end_header_id|>\\n\\nHere are the example input and output pairs from which you should learn the underlying rule to later predict the output for the given test input:\\n-----------------\\n<input>\\n4 0 4\\n0 0 0\\n0 4 0\\n</input>\\n\\n<output>\\n4 0 4 0 0 0 4 0 4\\n0 0 0 0 0 0 0 0 0\\n0 4 0 0 0 0 0 4 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 4 0 4 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 4 0 0 0 0\\n</output>\\n\\n<input>\\n0 0 0\\n0 0 2\\n2 0 2\\n</input>\\n\\n<output>\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 2\\n0 0 0 0 0 0 2 0 2\\n0 0 0 0 0 0 0 0 0\\n0 0 2 0 0 0 0 0 2\\n2 0 2 0 0 0 2 0 2\\n</output>\\n\\n<input>\\n6 6 0\\n6 0 0\\n0 6 6\\n</input>\\n\\n<output>\\n6 6 0 6 6 0 0 0 0\\n6 0 0 6 0 0 0 0 0\\n0 6 6 0 6 6 0 0 0\\n6 6 0 0 0 0 0 0 0\\n6 0 0 0 0 0 0 0 0\\n0 6 6 0 0 0 0 0 0\\n0 0 0 6 6 0 6 6 0\\n0 0 0 6 0 0 6 0 0\\n0 0 0 0 6 6 0 6 6\\n</output>\\n\\n<input>\\n2 2 2\\n0 0 0\\n0 2 2\\n</input>\\n\\n<output>\\n2 2 2 2 2 2 2 2 2\\n0 0 0 0 0 0 0 0 0\\n0 2 2 0 2 2 0 2 2\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 2 2 2 2 2 2\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 2 2 0 2 2\\n</output>\\n-----------------\\nNow, solve the following puzzle based on its input grid by applying the rules you have learned from the training data.:\\n-----------------\\n<input>\\n0 7 7\\n7 7 7\\n0 7 7\\n</input>\\n-----------------\\nWhat is the output grid? Only provide the output grid in the form as in the example input and output pairs. Do not provide any additional information:<|eot_id|><|start_header_id|>assistant<|end_header_id|>\\n\\n<output>\\n0 0 0 0 7 7 0 7 7\\n0 0 0 7 7 7 7 7 7\\n0 0 0 0 7 7 0 7 7\\n0 7 7 0 7 7 0 7 7\\n7 7 7 7 7 7 7 7 7\\n0 7 7 0 7 7 0 7 7\\n0 0 0 0 7 7 0 7 7\\n0 0 0 7 7 7 7 7 7\\n0 0 0 0 7 7 0 7 7\\n</output><|eot_id|>',\n",
+       " 'messages': [{'content': 'You are a puzzle solving wizard. You are given a puzzle from the abstraction and reasoning corpus developed by Francois Chollet.',\n",
+       "   'role': 'system'},\n",
+       "  {'content': 'Here are the example input and output pairs from which you should learn the underlying rule to later predict the output for the given test input:\\n-----------------\\n<input>\\n4 0 4\\n0 0 0\\n0 4 0\\n</input>\\n\\n<output>\\n4 0 4 0 0 0 4 0 4\\n0 0 0 0 0 0 0 0 0\\n0 4 0 0 0 0 0 4 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 4 0 4 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 4 0 0 0 0\\n</output>\\n\\n<input>\\n0 0 0\\n0 0 2\\n2 0 2\\n</input>\\n\\n<output>\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 2\\n0 0 0 0 0 0 2 0 2\\n0 0 0 0 0 0 0 0 0\\n0 0 2 0 0 0 0 0 2\\n2 0 2 0 0 0 2 0 2\\n</output>\\n\\n<input>\\n6 6 0\\n6 0 0\\n0 6 6\\n</input>\\n\\n<output>\\n6 6 0 6 6 0 0 0 0\\n6 0 0 6 0 0 0 0 0\\n0 6 6 0 6 6 0 0 0\\n6 6 0 0 0 0 0 0 0\\n6 0 0 0 0 0 0 0 0\\n0 6 6 0 0 0 0 0 0\\n0 0 0 6 6 0 6 6 0\\n0 0 0 6 0 0 6 0 0\\n0 0 0 0 6 6 0 6 6\\n</output>\\n\\n<input>\\n2 2 2\\n0 0 0\\n0 2 2\\n</input>\\n\\n<output>\\n2 2 2 2 2 2 2 2 2\\n0 0 0 0 0 0 0 0 0\\n0 2 2 0 2 2 0 2 2\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 0 0 0 0 0\\n0 0 0 2 2 2 2 2 2\\n0 0 0 0 0 0 0 0 0\\n0 0 0 0 2 2 0 2 2\\n</output>\\n-----------------\\nNow, solve the following puzzle based on its input grid by applying the rules you have learned from the training data.:\\n-----------------\\n<input>\\n0 7 7\\n7 7 7\\n0 7 7\\n</input>\\n-----------------\\nWhat is the output grid? Only provide the output grid in the form as in the example input and output pairs. Do not provide any additional information:',\n",
+       "   'role': 'user'},\n",
+       "  {'content': '<output>\\n0 0 0 0 7 7 0 7 7\\n0 0 0 7 7 7 7 7 7\\n0 0 0 0 7 7 0 7 7\\n0 7 7 0 7 7 0 7 7\\n7 7 7 7 7 7 7 7 7\\n0 7 7 0 7 7 0 7 7\\n0 0 0 0 7 7 0 7 7\\n0 0 0 7 7 7 7 7 7\\n0 0 0 0 7 7 0 7 7\\n</output>',\n",
+       "   'role': 'assistant'}]}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[\"train\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "c378dd15",
    "metadata": {},
    "outputs": [],
@@ -78147,7 +78239,7 @@
     "        challenge['correction']['output'] = correction[0]\n",
     "        challenge['correction']['message'] = correction[1]\n",
     "        \n",
-    "        train_augmented_dataset.append({'id': challenge_id, 'challenge': challenge})\n",
+    "        train_augmented_dataset.append({'id': challenge_id, 'challenge': challenge, 'solution': train_instance['solution']})\n",
     "        \n",
     "    for test_instance in dataset[\"test\"]:\n",
     "        challenge = test_instance['challenge'].copy()\n",
@@ -78160,88 +78252,102 @@
     "        challenge['correction']['output'] = correction[0]\n",
     "        challenge['correction']['message'] = correction[1]\n",
     "\n",
-    "        test_augmented_dataset.append({'id': challenge_id, 'challenge': challenge})\n",
+    "        test_augmented_dataset.append({'id': challenge_id, 'challenge': challenge, 'solution': test_instance['solution']})\n",
     "    \n",
     "    return DatasetDict({'train': Dataset.from_list(train_augmented_dataset), 'test': Dataset.from_list(test_augmented_dataset)})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4babe45b",
+   "execution_count": 26,
+   "id": "9e23c327",
    "metadata": {},
    "outputs": [],
    "source": [
-    "augmented_dataset = build_augmented_dataset(dataset, train_corrections, test_corrections)\n",
-    "augmented_dataset"
+    "def prepare_corrections(correction):\n",
+    "    if correction is None:\n",
+    "        return \"None\"\n",
+    "    padded_rows = [' '.join(map(str, row)) for row in correction]\n",
+    "    return \"\\n\".join(padded_rows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a127298",
+   "execution_count": 27,
+   "id": "c90ef8cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(tokenizer.apply_chat_template(\n",
-    "    dataset['test'][0]['messages'][:-1],\n",
-    "    tokenize=False,\n",
-    "    add_generation_prompt=True\n",
-    "))"
+    "BASIC_PROMPT = \"\"\"\n",
+    "Here are the example input and output pairs from which you should learn the underlying rule to later predict the output for the given test input:\n",
+    "-----------------\n",
+    "{training_data}\n",
+    "-----------------\n",
+    "Now, solve the following puzzle based on its input grid by applying the rules you have learned from the training data.:\n",
+    "-----------------\n",
+    "{input_test_data}\n",
+    "-----------------\n",
+    "What is the output grid? Only provide the output grid in the form as in the example output. Do not provide any additional information:\n",
+    "\"\"\"\n",
+    "MODEL_REPLY = \"\"\"assistant<output>\n",
+    "{output}\n",
+    "</output>\n",
+    "\"\"\"\n",
+    "\n",
+    "USER_CORRECTION = \"\"\"user<message>\n",
+    "{message}\n",
+    "</message>\n",
+    "\n",
+    "Now, solve the following puzzle based on its input grid by applying the rules you have learned from the training data and the error corrections you have received.\n",
+    "Only provide the output grid in the form as in the example input and output pairs. Do not provide any additional information:\n",
+    "-----------------\n",
+    "{input_test_data}\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "2ccce744",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_chat_with_correction(challenge, solution=None):\n",
-    "    user_content = data_utils.COMPREHENSIVE_PROMPT.format(\n",
+    "def create_chat_with_correction(challenge, solution):\n",
+    "    initial_input = BASIC_PROMPT.format(\n",
     "        training_data=\"\\n\\n\".join([prepare_inputs(ex) for ex in challenge[\"train\"]]),\n",
-    "        errors_corrections=f'<output>{challenge[\"correction\"][\"output\"]}</output>\\nMessage: {challenge[\"correction\"][\"message\"]}',\n",
-    "        input_test_data=prepare_inputs(challenge[\"test\"]),\n",
+    "        input_test_data=prepare_inputs({'input': challenge['test']['input']}),\n",
     "    )\n",
+    "\n",
+    "    assistant_reply = MODEL_REPLY.format(output=prepare_corrections(challenge[\"correction\"][\"output\"]))\n",
+    "\n",
+    "    user_correction = USER_CORRECTION.format(\n",
+    "        message=challenge[\"correction\"][\"message\"],\n",
+    "        input_test_data=prepare_inputs(challenge['test']),\n",
+    "    )\n",
+    "    \n",
+    "    assistant_final_reply = MODEL_REPLY.format(output=prepare_corrections(solution))\n",
     "\n",
     "    messages = [\n",
     "        {\"role\": \"system\", \"content\": data_utils.SYSTEM_PROMPT},\n",
-    "        {\"role\": \"user\", \"content\": user_content},\n",
+    "        {\"role\": \"user\", \"content\": initial_input}, # intial input\n",
+    "        {\"role\": \"assistant\", \"content\": assistant_reply}, # assistant response\n",
+    "        {\"role\": \"user\", \"content\": user_correction}, # user feedback + correction\n",
     "    ]\n",
-    "\n",
-    "    if solution:\n",
-    "        messages.append(\n",
-    "            {\n",
-    "                \"role\": \"assistant\",\n",
-    "                \"content\": prepare_inputs(solution, prepare_solution=True),\n",
-    "            }\n",
-    "        )\n",
-    "\n",
-    "    return messages"
+    "    \n",
+    "    if solution is not None:\n",
+    "        messages.append({\"role\": \"assistant\", \"content\": assistant_final_reply})\n",
+    "    \n",
+    "    return messages\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "66a05e8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(f\"{BASE_PATH}/data/train_corrections.json\", \"w\") as f:\n",
-    "    json.dump(transform_results(train_results), f, indent=4)\n",
-    "\n",
-    "with open(f\"{BASE_PATH}/data/test_corrections.json\", \"w\") as f:\n",
-    "    json.dump(transform_results(test_results), f, indent=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "4df117e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_dataset(tokenizer, dataset, base_path=None):\n",
+    "def prepare_augmented_dataset(tokenizer, dataset, base_path=None):\n",
     "    # Load all datasets\n",
     "    train_corrections = data_utils.load_data(f'{base_path}/data/train_corrections.json')\n",
     "    test_corrections = data_utils.load_data(f'{base_path}/data/test_corrections.json')\n",
@@ -78260,8 +78366,8 @@
     "\n",
     "        return {\"texts\": texts, \"messages\": chats}\n",
     "\n",
-    "    train_dataset = augmented_dataset[\"train\"].map(lambda x: process_dataset(x, augmented_dataset[\"train\"][\"solution\"]), batched=True)\n",
-    "    test_dataset = augmented_dataset[\"test\"].map(lambda x: process_dataset(x), batched=True)\n",
+    "    train_dataset = augmented_dataset[\"train\"].map(lambda x: process_dataset(x, solutions=x[\"solution\"]), batched=True)\n",
+    "    test_dataset = augmented_dataset[\"test\"].map(lambda x: process_dataset(x, solutions=x[\"solution\"]), batched=True)\n",
     "\n",
     "    return DatasetDict(\n",
     "        {\n",
@@ -78273,13 +78379,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "d5e77368",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 1302/1302 [00:01<00:00, 1226.59 examples/s]\n",
+      "Map: 100%|██████████| 1363/1363 [00:01<00:00, 1013.60 examples/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
+       "        num_rows: 1302\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['id', 'challenge', 'solution', 'texts', 'messages'],\n",
+       "        num_rows: 1363\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_dataset = prepare_augmented_dataset(tokenizer, dataset, base_path=BASE_PATH)\n",
+    "final_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a95fd792",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_dataset = prepare_dataset(tokenizer, dataset, base_path=BASE_PATH)\n",
-    "final_dataset"
+    "# make sure that you agree with what is on the image:\n",
+    "# <description>\n",
+    "# Now try to identify the pattern of the transformation that was applied to the input to produce the output.\n",
+    "# Explain the pattern breaking it down into smaller steps.\n",
+    "# Make sure to try and apply the same pattern to different given examples, to validate your hypothesis.\n",
+    "# Repeat and refine the process until your pattern does not fit all the given examples."
    ]
   }
  ],
